--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HTTP Memes</title>
     <script type="module" src="js/main.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
+    <base href="/http-memes/">
 </head>
 <body>
     <header>
